# RasterFari

./: ..gitignore.kate-swp  .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: RGFW.h.AD77876E7065D2D7.idx  RGFW_impl.c.05FAF74CD1B60606.idx  Util.c.80E0AE19E8107381.idx  Util.h.DA16B078205ACC0F.idx  cgltf.h.EC858B79811CEE38.idx  main.c.18DDA74DE887F79F.idx
assets/: Cube.glb
include/: Util.h
src/: .main.c.kate-swp  RGFW_impl.c  Util.c  main.c
